Added new option to make command from console instead of player.